--- a/index.html
+++ b/index.html
@@ -103,31 +103,31 @@
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
-                <img src="image/1.webp">
+                <img src="1.webp">
                 <div class="content">
                     Name Slider
                 </div>
             </div>
             <div class="item">
-                <img src="image/2.webp">
+                <img src="2.webp">
                 <div class="content">
                     Name Slider
                 </div>
             </div>
             <div class="item">
-                <img src="image/33.webp">
+                <img src="33.webp">
                 <div class="content">
                     Name Slider
                 </div>
             </div>
             <div class="item">
-                <img src="image/4.webp">
+                <img src="4.webp">
                 <div class="content">
                     Name Slider
                 </div>
             </div>
             <div class="item">
-                <img src="image/55.webp">
+                <img src="55.webp">
                 <div class="content">
                     Name Slider
                 </div>
